index.html: modify text

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-hover="Depertment">Depertment <i class="fa fa-angle-down" aria-hidden="true"></i></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="depertment-1.html">Cardilogists Depertment</a>
+                                        <li><a href="depertment-1.html">Cardilogists depertment</a>
                                         </li>
                                         <li><a href="depertment-2.html">Orthopaedics Depertment</a>
                                         </li>
