contact-style-2.html: text modify

--- a/contact-style-2.html
+++ b/contact-style-2.html
@@ -83,9 +83,9 @@
                                 <li class="dropdown active">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-hover="Home">Home <i class="fa fa-angle-down" aria-hidden="true"></i></span> </a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="index-2.html">Home one</a>
+                                        <li><a href="index-2.html">Home ONE</a>
                                         </li>
-                                        <li><a href="index-3.html">Home two</a>
+                                        <li><a href="index-3.html">Home TWO</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -94,7 +94,7 @@
                                     <ul class="dropdown-menu">
                                         <li><a href="depertment-1.html">Cardilogists Depertment</a>
                                         </li>
-                                        <li><a href="depertment-2.html">Orthopaedics Depertment</a>
+                                        <li><a href="depertment-2.html">Orthopaedics </a>
                                         </li>
                                         <li><a href="depertment-3.html">Gastroenlogy Depertment</a>
                                         </li>
@@ -104,7 +104,7 @@
                                         </li>
                                         <li><a href="depertment-6.html">Cancer Depertment</a>
                                         </li>
-                                        <li><a href="depertment-3.html">Colorectal Depertment</a>
+                                        <li><a href="depertment-3.html">Colorectal </a>
                                         </li>
                                         <li><a href="depertment-4.html">Bariatric Depertment</a>
                                         </li>
